--- a/AutoFocusCCD/Properties/Resources.resx
+++ b/AutoFocusCCD/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="delete_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PATH_IMAGE_CAPTURE" xml:space="preserve">
+    <value>./system/images</value>
+  </data>
+  <data name="Spinner_0_4s_800px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Spinner-0.4s-800px.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
