--- a/AutoFocusCCD/Properties/Resources.resx
+++ b/AutoFocusCCD/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="Spinner_0_4s_800px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Spinner-0.4s-800px.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Preferences" xml:space="preserve">
+    <value>preferences.json</value>
+  </data>
 </root>
